--- a/DjelatoWebClient/src/app/header/header.component.html
+++ b/DjelatoWebClient/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <header>
     <div id="header-time">
-     <span id >{{todayDate | date:'mediumDate'}}</span>
+     <span>{{todayDate | date:'mediumDate'}}</span>
    </div>
  
    <div id="menu">
