--- a/DjelatoWebClient/src/styles.css
+++ b/DjelatoWebClient/src/styles.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css?family=Courgette|Indie+Flower|Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Anton|Courgette|Indie+Flower|Roboto&display=swap');
+@import "~ngx-toastr/toastr.css";
 
 html{
     height: 100%;
@@ -12,6 +13,15 @@ body {
     width: 100%;
     box-sizing: border-box;
     outline: none;
+}
+body {
+    scrollbar-face-color: #000000 !important;
+    scrollbar-shadow-color: #2D2C4D;
+    scrollbar-highlight-color:#7D7E94;
+    scrollbar-3dlight-color: #7D7E94;
+    scrollbar-darkshadow-color: #2D2C4D;
+    scrollbar-track-color: #7D7E94;
+    scrollbar-arrow-color: #C1C1D1; 
 }
 
 a, a:hover {
