--- a/DjelatoWebClient/src/app/header/header.component.css
+++ b/DjelatoWebClient/src/app/header/header.component.css
@@ -1,12 +1,21 @@
 header {
-    background: #01002e;
+    background: #f56262;
     width: 100%;
-    height: 50px;
     margin: 0;
     position: relative;
 }
 
-#header-time {
+.header-container {
+    margin: 0 auto;
+    padding: 0 30px;
+}
+
+#user-menu {
+    
+}
+
+
+/* #header-time {
     float: left;
     height: 100%;
     margin-left: 10px;
@@ -18,15 +27,6 @@ header {
     font-family: 'Roboto', sans-serif;
     font-weight: bolder;
     line-height: 50px;
-}
-
-#header-name p {
-    text-align: center;
-    line-height: 50px;
-    font-size: 2em;
-    color: whitesmoke;
-    margin: 0;
-    padding: 0;
 }
 
 @media(max-width: 500px){
@@ -74,4 +74,4 @@ button.mat-menu-item:hover {
     padding: 0px !important;
     border-radius: 10px !important;
     border: 1px black solid !important;
-}
+} */
