--- a/DjelatoWebClient/src/app/nav-bar/nav-bar.component.css
+++ b/DjelatoWebClient/src/app/nav-bar/nav-bar.component.css
@@ -1,5 +1,7 @@
 .sidenav-container {
-  height: 100%;
+  height: 100vh;
+  background: rgb(224,234,252);
+  background: linear-gradient(118deg, rgba(224,234,252,1) 0%, rgba(255,255,255,1) 100%);
 }
 
 .sidenav {
@@ -43,6 +45,3 @@
 #button-icon-menu {
   margin-left: 10px;
 }
-
-
-
