--- a/DjelatoWebClient/src/app/nav-bar/nav-bar.component.html
+++ b/DjelatoWebClient/src/app/nav-bar/nav-bar.component.html
@@ -35,7 +35,7 @@
       <mat-divider></mat-divider>
 
       <mat-list-item>
-        <a class="mat-list-links" mat-list-item (click) = "createDialog()" routerLinkActive="active">
+        <a class="mat-list-links" mat-list-item routerLink="/signup" routerLinkActive="active">
           <mat-icon mat-list-icon>account_circle</mat-icon>
           <span class="icon-description">Registration</span>
         </a>
