--- a/DjelatoWebClient/src/styles.css
+++ b/DjelatoWebClient/src/styles.css
@@ -1,19 +1,20 @@
 @import url('https://fonts.googleapis.com/css?family=Anton|Courgette|Indie+Flower|Roboto&display=swap');
 @import "~ngx-toastr/toastr.css";
 
-html{
-    height: 100%;
+
+html, body {
+    min-height: 100vh;
+    height: auto;    
     width: 100%;
 }
 
 body {
     margin: 0;
     padding: 0;
-    height: 100%;
-    width: 100%;
     box-sizing: border-box;
     outline: none;
 }
+
 body {
     scrollbar-face-color: #000000 !important;
     scrollbar-shadow-color: #2D2C4D;
